--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg- fixed-top  " id="sideNav">
         <a class="navbar-brand js-scroll-trigger " href="#page-top">
             <span class="d-block d-lg-none ">ALEIX PEREZ</span>
-            <span class="d-none d-lg-block"><img class="img-fluid rounded mb-5 " src="assets/img/_DSC3437 (1).jpg"
+            <span class="d-none d-lg-block"><img class="img-fluid rounded mb-5 " src="assets/img/ftnavbar.jpg"
                     alt="" /></span>
         </a>
         <button class="navbar-toggler c mt-20" type="button" data-toggle="collapse"
